# You must change these to your own details.
[package]
name = "web-wasm"
description = "An online playground for the Steel programming language"
version = "0.2.0"
authors = ["Matthew Paras <mattwparas@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
codegen-units = 1
opt-level = 's'

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
js-sys = "0.3.67"
serde = { version = "1.0", features = ["derive"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
# steel-core = { path = "../../steel/crates/steel-core", default-features = false, features = ["modules"] }
steel-core = { git = "https://github.com/mattwparas/steel", branch = "master"}
itertools = "0.10.0"

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

getrandom = { version = "0.2", features = ["js"] }
# console_error_panic_hook = "0.1.5"


# # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# # compared to the default allocator's ~10K. However, it is slower than the default
# # allocator, so it's not enabled by default.
# wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3"
features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
# [target."cfg(debug_assertions)".dependencies]
# console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.1.27"
js-sys = "0.3.67"
wasm-bindgen-futures = "0.3"

[package.metadata.wasm-pack.profile.release]
# See https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
wasm-opt = ["-Oz", "--enable-mutable-globals"]
